--- a/overview/index.html
+++ b/overview/index.html
@@ -11,8 +11,11 @@
 </head>
 <body>
     
-
-
+    <form action="" name="form">
+        <input type="number" name="n1" id="">
+        <input type="number" name="n1" id="">
+        <input type="button" onclick="calculator()">
+    </form>
 
 </body>
 </html>
