começando a resolver o desafio

--- a/students/kalebe/10 - get-Json-with-fetch-using-promise/index.html
+++ b/students/kalebe/10 - get-Json-with-fetch-using-promise/index.html
@@ -7,7 +7,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <ul class="myList"></ul>
+    alou
+    <ul class="myList">
+
+
+    </ul>
     
 </body>
 </html>
