--- a/project-favorites/public/index.html
+++ b/project-favorites/public/index.html
@@ -8,7 +8,7 @@
     <!-- ligando no documento de estilo -->
     <link rel="stylesheet" href="style.css">
     <!-- ligando no documento em JavaScript -->
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
     
 </head>
 <body>
